--- a/templates/add_sell.html
+++ b/templates/add_sell.html
@@ -223,7 +223,7 @@
                             </ul>
                         </div>
                         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                            <a href="{{ url_for('trading.trades') }}"
+                            <a href="{{ url_for("trading.trades") }}"
                                class="btn btn-secondary me-md-2">
                                 <i class="bi bi-arrow-left"></i> 取消
                             </a>
