--- a/templates/time_detail.html
+++ b/templates/time_detail.html
@@ -163,27 +163,21 @@
                                 <select class="form-select form-select-sm"
                                         id="sortSelect"
                                         onchange="updateSort()">
-                                    <option value="total_score"
-                                            {{ 'selected' if sort_by == 'total_score' else '' }}>总分
+                                    <option value="total_score" {{ 'selected' if sort_by == 'total_score' else '' }}>总分
                                     </option>
                                     <option value="win_rate" {{ 'selected' if sort_by == 'win_rate' else '' }}>胜率
                                     </option>
-                                    <option value="avg_profit_loss_ratio"
-                                            {{ 'selected' if sort_by == 'avg_profit_loss_ratio' else '' }}>盈亏比
+                                    <option value="avg_profit_loss_ratio" {{ 'selected' if sort_by == 'avg_profit_loss_ratio' else '' }}>盈亏比
                                     </option>
-                                    <option value="avg_holding_days"
-                                            {{ 'selected' if sort_by == 'avg_holding_days' else '' }}>持仓天数
+                                    <option value="avg_holding_days" {{ 'selected' if sort_by == 'avg_holding_days' else '' }}>持仓天数
                                     </option>
-                                    <option value="strategy_code"
-                                            {{ 'selected' if sort_by == 'strategy_code' else '' }}>策略名称
+                                    <option value="strategy_code" {{ 'selected' if sort_by == 'strategy_code' else '' }}>策略名称
                                     </option>
                                     <option value="win_rate" {{ 'selected' if sort_by == 'win_rate' else '' }}>胜率
                                     </option>
-                                    <option value="avg_profit_loss_ratio"
-                                            {{ 'selected' if sort_by == 'avg_profit_loss_ratio' else '' }}>盈亏比
+                                    <option value="avg_profit_loss_ratio" {{ 'selected' if sort_by == 'avg_profit_loss_ratio' else '' }}>盈亏比
                                     </option>
-                                    <option value="avg_holding_days"
-                                            {{ 'selected' if sort_by == 'avg_holding_days' else '' }}>持仓天数
+                                    <option value="avg_holding_days" {{ 'selected' if sort_by == 'avg_holding_days' else '' }}>持仓天数
                                     </option>
                                 </select>
                             </div>
