--- a/templates/trade_details.html
+++ b/templates/trade_details.html
@@ -5,7 +5,7 @@
         <div class="col-12">
             <!-- 返回按钮 -->
             <div class="mb-3">
-                <a href="{{ url_for('trading.trades') }}"
+                <a href="{{ url_for("trading.trades") }}"
                    class="btn btn-outline-secondary">
                     <i class="bi bi-arrow-left"></i> 返回交易列表
                 </a>
