--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         <!-- 导航栏 -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <a class="navbar-brand" href="{{ url_for('main.index') }}">
+                <a class="navbar-brand" href="{{ url_for("main.index") }}">
                     <i class="bi bi-graph-up-arrow"></i> 多策略系统分析
                 </a>
                 <button class="navbar-toggler"
@@ -29,35 +29,35 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('main.index') }}">
+                            <a class="nav-link" href="{{ url_for("main.index") }}">
                                 <i class="bi bi-house"></i> 首页
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('trading.trades') }}">
+                            <a class="nav-link" href="{{ url_for("trading.trades") }}">
                                 <i class="bi bi-list-ul"></i> 交易记录
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('trading.add_buy') }}">
+                            <a class="nav-link" href="{{ url_for("trading.add_buy") }}">
                                 <i class="bi bi-plus-circle"></i> 新建买入
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('analysis.strategy_scores') }}">
+                            <a class="nav-link" href="{{ url_for("analysis.strategy_scores") }}">
                                 <i class="bi bi-award"></i> 策略评分
                             </a>
                         </li>
-						<li class="nav-item">
-							<a class="nav-link" href="{{ url_for('macro.dashboard') }}">
-								<i class="bi bi-globe2"></i> 宏观观察
-							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{{ url_for('admin.db_diagnose_page') }}">
-								<i class="bi bi-hdd-network"></i> 数据库管理
-							</a>
-						</li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for("macro.dashboard") }}">
+                                <i class="bi bi-globe2"></i> 宏观观察
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for("admin.db_diagnose_page") }}">
+                                <i class="bi bi-hdd-network"></i> 数据库管理
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
