--- a/templates/macro_compare.html
+++ b/templates/macro_compare.html
@@ -1,37 +1,33 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container">
-  <h2>宏观 - 多国对比</h2>
-  <p>视图：{{ snapshot.view }} | 窗口：{{ snapshot.window }}</p>
-  <div class="table-responsive">
-    <table class="table table-striped table-hover align-middle">
-      <thead>
-        <tr>
-          <th>经济体</th>
-          <th>综合分</th>
-          {% for ind in snapshot.matrix[snapshot.economies[0]].by_indicator.keys() %}
-            <th>{{ ind }}</th>
-          {% endfor %}
-        </tr>
-      </thead>
-      <tbody>
-        {% for eco in snapshot.economies %}
-          {% set row = snapshot.matrix[eco] %}
-          <tr>
-            <td>{{ eco }}</td>
-            <td>{{ '%.1f'|format(row.composite) }}</td>
-            {% for ind, iv in row.by_indicator.items() %}
-              <td>{{ '%.1f'|format(iv) }}</td>
-            {% endfor %}
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
-  <div class="mt-3">
-    <a class="btn btn-outline-secondary" href="/macro">返回宏观总览</a>
-  </div>
-</div>
+    <div class="container">
+        <h2>宏观 - 多国对比</h2>
+        <p>视图：{{ snapshot.view }} | 窗口：{{ snapshot.window }}</p>
+        <div class="table-responsive">
+            <table class="table table-striped table-hover align-middle">
+                <thead>
+                    <tr>
+                        <th>经济体</th>
+                        <th>综合分</th>
+                        {% for ind in snapshot.matrix[snapshot.economies[0]].by_indicator.keys() %}<th>{{ ind }}</th>{% endfor %}
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for eco in snapshot.economies %}
+                        {% set row = snapshot.matrix[eco] %}
+                        <tr>
+                            <td>{{ eco }}</td>
+                            <td>{{ '%.1f'|format(row.composite) }}</td>
+                            {% for ind, iv in row.by_indicator.items() %}
+                                <td>{{ '%.1f'|format(iv) }}</td>
+                            {% endfor %}
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <div class="mt-3">
+            <a class="btn btn-outline-secondary" href="/macro">返回宏观总览</a>
+        </div>
+    </div>
 {% endblock %}
-
-
